--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
      <img src="./quarter-zip-nobg.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
-    <p><b>Welcome to the new hub for everything Kappa Rho!</b></p>
+    <p><b>Welcome to the new hub for everything Kappa Rho!</b></p><br>
       
       <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages. 
       Use the menu to access pages for the Legacy Foundation, 40th Anniversary archive, Alumni Advisory Board Interest Form, and LEAD Session Interest Form. 
@@ -587,6 +587,7 @@ pwInput.addEventListener('input', clearError);
   
 </body>
 </html>
+
 
 
 
