--- a/index.html
+++ b/index.html
@@ -462,11 +462,12 @@
      <img src="./quarter-zip-nobg.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
-    <p><b>Welcome to the new hub for everything Kappa Rho!</b></p><br>
+    <p><b>Welcome to the new hub for everything Kappa Rho! We are so excited to see what this new website can become as it hopefully can evolve
+    to centralize and connect us all better than ever before!</b></p><br>
       
-      <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages. 
-      Use the menu to access pages for the Legacy Foundation, 40th Anniversary archive, Alumni Advisory Board Interest Form, and LEAD Session Interest Form. 
-      More sections coming soon.</p>
+      <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages.<br>
+      Please check out the menu in the top left corner of your screen to navigate to the different Kappa Rho resources currently available.
+      More sections coming soon!</p>
 
     <!-- Directory button -->
 <a href="#" class="gold-btn" id="dirBtn">View Contact Directory</a>
@@ -620,6 +621,7 @@ function closeDrawer(){
   
 </body>
 </html>
+
 
 
 
