--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
      <img src="./quarter-zip-nobg.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
-    <p><b>Welcome to the new hub for everything Kappa Rho! We are so excited to see what this new website can become as it hopefully can evolve
+    <p><b>Welcome to the new hub for everything Kappa Rho! <br>We are so excited to see what this new website can become as it hopefully can evolve
     to centralize and connect us all better than ever before!</b></p><br>
       
-      <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages.<br>
+      <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages.<br><br>
       Please check out the menu in the top left corner of your screen to navigate to the different Kappa Rho resources currently available.
       More sections coming soon!</p>
 
@@ -621,6 +621,7 @@ function closeDrawer(){
   
 </body>
 </html>
+
 
 
 
