--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
           <span class="sub">Photos, schedule, weekend materials</span>
         </a>
         <a href="https://forms.gle/AEqkNnboj5LtCy8C6" target="_blank" rel="noopener">
-        Alumni Advisory Board 🔗
+        Alumni Advisory Board 🔗↗️
         <span class="sub">Interest Form to Join</span>
         </a>
         <a href="https://forms.gle/EZPrBfjeUycf1QKR7" target="_blank" rel="noopener">
-        LEAD Sessions Interest Form 🔗
+        LEAD Sessions Interest Form 🔗↗️
         <span class="sub">Be a LEAD Session Guest Speaker</span>
         </a>
       </div>
@@ -621,6 +621,7 @@ function closeDrawer(){
   
 </body>
 </html>
+
 
 
 
