--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
   <!-- main -->
   <main class="hero">
     <h1>Sigma Nu</h1>
-     <img src="./quarter-zip-nobg.png"
+     <img src="website-logo-final.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
     <p><b>Welcome to the new hub for everything Kappa Rho! <br>We are so excited to see what this new website can become as it hopefully can evolve
@@ -621,6 +621,7 @@ function closeDrawer(){
   
 </body>
 </html>
+
 
 
 
