--- a/index.html
+++ b/index.html
@@ -444,6 +444,11 @@
           40th Anniversary (Archive)
           <span class="sub">Photos, schedule, weekend materials</span>
         </a>
+        </a>
+        <a href="https://drive.google.com/drive/folders/1F1I3lkxmmFElPermISusqDyC1fenHadg" target="_blank" rel="noopener">
+        KP 40th Official Photos! 🔗↗️
+        <span class="sub">Official photos from 40th Anniversary Celebration</span>
+        </a>
         <a href="https://forms.gle/AEqkNnboj5LtCy8C6" target="_blank" rel="noopener">
         Alumni Advisory Board 🔗↗️
         <span class="sub">Interest Form to Join</span>
@@ -455,12 +460,10 @@
         <a href="#" class="protected" data-url="https://docs.google.com/spreadsheets/d/12Q5SwFzKwP17TxVvZODEQqGuYCIkw33ih6eWWkQtixU/edit?usp=sharing">
         Contact Directory 🔗↗️
         <span class="sub">Check our current contact info database</span>
-        </a>
-
+        
       </div>
     </nav>
   </aside>
-
   <!-- main -->
   <main class="hero">
      <img src="website-logo-final.png"
@@ -634,6 +637,7 @@ document.querySelectorAll('.protected').forEach(link => {
   
 </body>
 </html>
+
 
 
 
