--- a/index.html
+++ b/index.html
@@ -469,8 +469,7 @@
      <img src="website-logo-final.png"
        alt="Sigma Nu quarter-zip"
        class="hero-image">
-    <p><b>Welcome to the new hub for everything Kappa Rho! <br>We are so excited to see what this new website can become as it hopefully can evolve
-    to centralize and connect us all better than ever before!</b></p><br>
+    <p><b>Welcome to the new hub for everything Kappa Rho! </b></p><br>
       
       <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages.<br><br>
       Please check out the menu in the top left corner of your screen to navigate to the different Kappa Rho resources currently available.
@@ -637,6 +636,7 @@ document.querySelectorAll('.protected').forEach(link => {
   
 </body>
 </html>
+
 
 
 
