--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     });
 
 // --- Directory modal ---
-const DIR_URL = 'https://docs.google.com/spreadsheets/d/12Q5SwFzKwP17TxVvZODEQqGuYCIkw33ih6eWWkQtixU/edit?usp=sharing';
+let DIR_URL = 'https://docs.google.com/spreadsheets/d/12Q5SwFzKwP17TxVvZODEQqGuYCIkw33ih6eWWkQtixU/edit?usp=sharing';
 
 const dirBtn   = document.getElementById('dirBtn');
 const pwModal  = document.getElementById('pwModal');
@@ -636,6 +636,7 @@ document.querySelectorAll('.protected').forEach(link => {
   
 </body>
 </html>
+
 
 
 
