--- a/index.html
+++ b/index.html
@@ -470,6 +470,15 @@
        alt="Sigma Nu quarter-zip"
        class="hero-image">
     <p><b>Welcome to the new hub for everything Kappa Rho! </b></p><br>
+
+    <a
+  href="#calendar"
+  class="gold-btn protected"
+  data-url="https://calendar.google.com/calendar/embed?src=32fa5a87e561cd3d1c9eb591af7e6c76a685028f8614b7de31af6e8ebed6c814%40group.calendar.google.com&ctz=America%2FLos_Angeles"
+>
+  Active Event Calendar
+</a>
+
       
       <p>This website is still 🚧<b>heavily under development</b>🚧 and in its early stages.<br><br>
       Please check out the menu in the top left corner of your screen to navigate to the different Kappa Rho resources currently available.
@@ -636,6 +645,7 @@ document.querySelectorAll('.protected').forEach(link => {
   
 </body>
 </html>
+
 
 
 
