--- a/honor-council.html
+++ b/honor-council.html
@@ -2,104 +2,194 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Honor Council | Sigma Nu Kappa Rho</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Honor Council of Sigma Nu Kappa Rho — standards, procedures, and accountability." />
+
+  <!-- Page-specific styles ONLY -->
+  <style>
+    /* ===== Honor Council Page ===== */
+
+    .hc-container{
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 4rem 1.5rem 6rem;
+    }
+
+    .hc-hero{
+      text-align: center;
+      margin-bottom: 4rem;
+    }
+
+    .hc-kicker{
+      display:inline-block;
+      font-size:.9rem;
+      letter-spacing:.4px;
+      color:#e7e7e7;
+      border:1px solid var(--hair);
+      border-radius:999px;
+      padding:6px 14px;
+      margin-bottom:1.2rem;
+      backdrop-filter:saturate(115%) blur(4px);
+      background:rgba(255,255,255,0.03);
+    }
+
+    .hc-title{
+      font-family:"Cinzel", serif;
+      font-size:clamp(2.2rem,5vw,3.4rem);
+      line-height:1.1;
+      margin:0 0 1rem;
+      background:linear-gradient(90deg,var(--gold1),var(--gold2));
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+      text-shadow:0 0 18px rgba(255,215,0,.25);
+    }
+
+    .hc-lead{
+      max-width:760px;
+      margin:0 auto;
+      font-size:clamp(1rem,2vw,1.15rem);
+      color:#e5e5e5;
+      opacity:.9;
+    }
+
+    .hc-section{
+      margin-top:4rem;
+    }
+
+    .hc-section-title{
+      font-family:"DM Serif Display", serif;
+      font-size:1.6rem;
+      margin-bottom:.75rem;
+      background:linear-gradient(90deg,var(--gold1),var(--gold2));
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+    }
+
+    .hc-text{
+      color:#e0e0e0;
+      line-height:1.7;
+      max-width:840px;
+    }
+
+    .hc-list{
+      margin-top:1rem;
+      padding-left:1.2rem;
+      color:#e0e0e0;
+      line-height:1.8;
+    }
+
+    .hc-divider{
+      border:none;
+      border-top:1px solid var(--hair);
+      margin:3rem 0;
+    }
+
+    .hc-muted{
+      font-size:.95rem;
+      color:#bdbdbd;
+    }
+
+    .hc-links a{
+      color:var(--gold1);
+      text-decoration:none;
+    }
+
+    .hc-links a:hover{
+      text-decoration:underline;
+    }
+
+  </style>
 </head>
 
 <body>
 
-  <!-- HERO / HEADER -->
-  <header>
-    <h1>Honor Council</h1>
-    <p>Sigma Nu Fraternity — Kappa Rho Chapter</p>
-    <hr />
-  </header>
+  <!-- header / drawer come from your global layout -->
 
-  <!-- PURPOSE -->
-  <section id="purpose">
-    <h2>Purpose</h2>
-    <p>
-      The Honor Council is responsible for upholding the standards, values, and
-      expectations of Sigma Nu through fair, confidential, and consistent
-      judicial review.
-    </p>
-  </section>
+  <main class="hero">
+    <div class="hc-container">
 
-  <!-- AUTHORITY -->
-  <section id="authority">
-    <h2>Authority & Scope</h2>
-    <ul>
-      <li>Adjudicates alleged violations of chapter bylaws and codes of conduct</li>
-      <li>Ensures due process and procedural fairness</li>
-      <li>Recommends and enforces sanctions when applicable</li>
-      <li>Maintains confidentiality and accurate records</li>
-    </ul>
-  </section>
+      <!-- HERO -->
+      <section class="hc-hero">
+        <span class="hc-kicker">Governance · Accountability · Standards</span>
+        <h1 class="hc-title">Honor Council</h1>
+        <p class="hc-lead">
+          The Honor Council of Sigma Nu Kappa Rho is responsible for upholding the
+          chapter’s standards through fair, confidential, and consistent
+          judicial review.
+        </p>
+      </section>
 
-  <!-- STRUCTURE -->
-  <section id="structure">
-    <h2>Structure</h2>
-    <ul>
-      <li>Chair</li>
-      <li>Voting Members</li>
-      <li>Recording Secretary</li>
-      <li>Advisor (non-voting)</li>
-    </ul>
-  </section>
+      <!-- PURPOSE -->
+      <section class="hc-section">
+        <h2 class="hc-section-title">Purpose</h2>
+        <p class="hc-text">
+          The Honor Council exists to preserve the integrity of the chapter by
+          addressing conduct matters with due process, impartiality, and respect
+          for all individuals involved.
+        </p>
+      </section>
 
-  <!-- PROCESS OVERVIEW -->
-  <section id="process">
-    <h2>Judicial Process Overview</h2>
-    <ol>
-      <li>Case referral or intake</li>
-      <li>Preliminary review</li>
-      <li>Hearing and fact-finding</li>
-      <li>Deliberation</li>
-      <li>Determination and sanctions (if applicable)</li>
-      <li>Notification and appeals</li>
-    </ol>
-  </section>
+      <hr class="hc-divider" />
 
-  <!-- MEETINGS -->
-  <section id="meetings">
-    <h2>Meetings</h2>
-    <p>
-      Honor Council meetings are held as needed. Quorum is required for all
-      determinations. Portions of meetings may be closed to preserve
-      confidentiality.
-    </p>
-  </section>
+      <!-- AUTHORITY -->
+      <section class="hc-section">
+        <h2 class="hc-section-title">Authority & Scope</h2>
+        <ul class="hc-list">
+          <li>Adjudicates alleged violations of chapter bylaws and codes of conduct</li>
+          <li>Ensures procedural fairness and confidentiality</li>
+          <li>Determines responsibility and applies sanctions when appropriate</li>
+          <li>Maintains accurate and secure records</li>
+        </ul>
+      </section>
 
-  <!-- DOCUMENTS -->
-  <section id="documents">
-    <h2>Documents & Resources</h2>
-    <ul>
-      <li><a href="#">Chapter Bylaws</a></li>
-      <li><a href="#">Code of Conduct</a></li>
-      <li><a href="#">Judicial Procedures</a></li>
-      <li><a href="#">Sanctions Matrix</a></li>
-    </ul>
-    <p><em>Links to be added.</em></p>
-  </section>
+      <hr class="hc-divider" />
 
-  <!-- CONTACT -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>
-      For questions regarding procedures or referrals, contact the Honor Council
-      Chair or Chapter Advisor.
-    </p>
-  </section>
+      <!-- STRUCTURE -->
+      <section class="hc-section">
+        <h2 class="hc-section-title">Structure</h2>
+        <ul class="hc-list">
+          <li>Chair</li>
+          <li>Voting Members</li>
+          <li>Recording Secretary</li>
+          <li>Advisor (non-voting)</li>
+        </ul>
+      </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <hr />
-    <p>
-      © Sigma Nu Fraternity — Kappa Rho Chapter<br />
-      Honor Council
-    </p>
-  </footer>
+      <hr class="hc-divider" />
+
+      <!-- PROCESS -->
+      <section class="hc-section">
+        <h2 class="hc-section-title">Judicial Process Overview</h2>
+        <ol class="hc-list">
+          <li>Case referral or intake</li>
+          <li>Preliminary review</li>
+          <li>Hearing and fact-finding</li>
+          <li>Deliberation</li>
+          <li>Determination and sanctions (if applicable)</li>
+          <li>Notification and appeals</li>
+        </ol>
+      </section>
+
+      <hr class="hc-divider" />
+
+      <!-- DOCUMENTS -->
+      <section class="hc-section hc-links">
+        <h2 class="hc-section-title">Documents & Resources</h2>
+        <ul class="hc-list">
+          <li><a href="#">Chapter Bylaws</a></li>
+          <li><a href="#">Code of Conduct</a></li>
+          <li><a href="#">Judicial Procedures</a></li>
+          <li><a href="#">Sanctions Matrix</a></li>
+        </ul>
+        <p class="hc-muted">
+          Additional materials will be added as this section is expanded.
+        </p>
+      </section>
+
+    </div>
+  </main>
+
+  <!-- footer comes from your global layout -->
 
 </body>
 </html>
