--- a/honor-council.html
+++ b/honor-council.html
@@ -185,6 +185,92 @@
   }
 </script>
 
+  <!-- Password Gate -->
+<div id="pwGate" style="
+  position:fixed;
+  inset:0;
+  background:#000;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+">
+  <div style="
+    width:320px;
+    padding:28px 24px;
+    background:#0b0b0b;
+    border:1px solid rgba(255,255,255,0.15);
+    border-radius:16px;
+    text-align:center;
+  ">
+    <h2 style="
+      margin:0 0 10px;
+      font-family:'Cinzel',serif;
+      background:linear-gradient(90deg,#ffd700,#ffb02e);
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+    ">
+      Restricted Access
+    </h2>
+
+    <p style="color:#cfcfcf;font-size:.95rem;margin-bottom:14px;">
+      Enter password to access Honor Council materials.
+    </p>
+
+    <input
+      type="password"
+      id="pwInput"
+      placeholder="Password"
+      style="
+        width:100%;
+        height:42px;
+        border-radius:10px;
+        border:1px solid rgba(255,255,255,0.2);
+        background:#000;
+        color:#fff;
+        padding:0 10px;
+        margin-bottom:12px;
+      "
+    />
+
+    <div id="pwError" style="color:#ffb7b7;font-size:.9rem;display:none;margin-bottom:10px;">
+      Incorrect password.
+    </div>
+
+    <button onclick="unlockPage()" style="
+      width:100%;
+      height:42px;
+      border-radius:999px;
+      border:none;
+      font-weight:600;
+      cursor:pointer;
+      background:linear-gradient(90deg,#ffd700,#ffb02e);
+      color:#000;
+    ">
+      Enter
+    </button>
+  </div>
+</div>
+
+<script>
+  function unlockPage(){
+    const input = document.getElementById('pwInput');
+    const error = document.getElementById('pwError');
+
+    if(input.value.trim().toLowerCase() === 'kp'){
+      document.getElementById('pwGate').remove();
+      document.getElementById('protectedPage').style.display = 'block';
+    } else {
+      error.style.display = 'block';
+      input.select();
+    }
+  }
+
+  document.getElementById('pwInput').addEventListener('keydown', e => {
+    if(e.key === 'Enter') unlockPage();
+  });
+</script>
+
 
   
 </body>
