--- a/honor-council.html
+++ b/honor-council.html
@@ -128,7 +128,7 @@
           Official records of Honor Council meetings, including attendance,
           motions, decisions, and outcomes.
         </p>
-        <a href="#">Access Meeting Minutes →</a>
+        <a href="https://drive.google.com/drive/folders/1LWCWQiaAFDecPBg6heZM5KQDSPnD-hDA?usp=drive_link">Access Meeting Minutes →</a>
       </div>
 
       <div class="hc-card">
@@ -137,7 +137,7 @@
           Records documenting late dues payments, payment plans, and
           related administrative actions.
         </p>
-        <a href="#">Access Dues Records →</a>
+        <a href="https://docs.google.com/document/d/1BY_s_xkM-8d-lZakAMnxXI3S-XDHOaD7BIz7FdWvTLU/edit?usp=drive_link">Access Dues Records →</a>
       </div>
 
       <div class="hc-card">
@@ -146,7 +146,7 @@
           Records of disciplinary actions, sanctions, probationary measures,
           or other determinations issued by the Honor Council.
         </p>
-        <a href="#">Access Disciplinary Records →</a>
+        <a href="https://docs.google.com/document/d/1LtzzGLdKUX6-x3vXiDnHOxgZopFPAK6sl82FORh8G4Q/edit?usp=drive_link">Access Disciplinary Records →</a>
       </div>
 
     </section>
